--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:type" content="website">
+<meta property="og:url" content="https://ki-ferien.de/">
+<meta property="og:title" content="KI-Ferien.de | Deine perfekten Ferien in Sekunden geplant">
+<meta property="og:description" content="Nutze Künstliche Intelligenz für deine Ferienplanung. Finde Traumziele passend zu deinem Budget – stressfrei und schnell.">
+<meta property="og:image" content="https://ki-ferien.de/social-share-bild.jpg">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="KI-Ferien.de | Smarte Reiseplanung">
+<meta name="twitter:description" content="Finde deine nächsten Ferien mit KI.">
+<meta name="twitter:image" content="https://ki-ferien.de/social-share-bild.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KI-Ferien.de | Kosmische Ferien</title>
     <style>
