--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:type" content="website">
+    <meta property="og:type" content="article">
 <meta property="og:url" content="https://ki-ferien.de/">
 <meta property="og:title" content="KI-Ferien.de | Deine perfekten Ferien in Sekunden geplant">
 <meta property="og:description" content="Nutze Künstliche Intelligenz für deine Ferienplanung. Finde Traumziele passend zu deinem Budget – stressfrei und schnell.">
