--- a/astro/index.html
+++ b/astro/index.html
@@ -6,7 +6,7 @@
     <title>KI-Ferien.de | Astro-Planer</title>
     <style>
         :root {
-            --glow-color: rgba(0, 150, 255, 0.7);
+            --glow-color: rgba(0, 150, 255, 0.8);
             --text-gold: #ffcc00;
             --bg-dark: #050a15;
         }
@@ -15,17 +15,62 @@
             margin: 0;
             padding: 0;
             background: var(--bg-dark);
-            /* Ein kräftigerer Gradient, damit man sieht, dass die Seite lebt */
-            background-image: radial-gradient(circle at center, #0a1931 0%, #050a15 100%);
             color: white;
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
             min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            overflow-x: hidden;
+            overflow: hidden; /* Wichtig für die Hintergrund-Animation */
         }
 
+        /* --- MAGISCHER HINTERGRUND START --- */
+        
+        /* Layer 1: Tiefer Weltraum */
+        .bg-deep-space {
+            position: fixed;
+            top: 0; left: 0; width: 100%; height: 100%;
+            z-index: -3;
+            background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
+        }
+
+        /* Layer 2: Funkelnde Sterne (bewegt sich langsam) */
+        .bg-stars {
+            position: fixed;
+            top: 0; left: 0; width: 200%; height: 200%; /* Größer für Bewegung */
+            z-index: -2;
+            background: transparent url('https://www.transparenttextures.com/patterns/stardust.png') repeat;
+            opacity: 0.7;
+            animation: move-stars 200s linear infinite;
+        }
+
+        /* Layer 3: Magischer Nebel-Glow (rotiert langsam) */
+        .bg-nebula {
+            position: fixed;
+            top: 50%; left: 50%;
+            width: 150vmax; height: 150vmax; /* Sehr groß, damit es den Screen füllt */
+            transform: translate(-50%, -50%);
+            z-index: -1;
+            /* Ein subtiler Mix aus Blau und Violett */
+            background: radial-gradient(circle at center, rgba(0, 100, 255, 0.15) 0%, rgba(120, 0, 255, 0.1) 30%, transparent 70%);
+            animation: rotate-nebula 120s linear infinite;
+            pointer-events: none; /* Klicks gehen durch */
+        }
+
+        /* Animationen für den Hintergrund */
+        @keyframes move-stars {
+            from { transform: translateY(0px) translateX(0px); }
+            to { transform: translateY(-500px) translateX(-200px); }
+        }
+        @keyframes rotate-nebula {
+            from { transform: translate(-50%, -50%) rotate(0deg); }
+            to { transform: translate(-50%, -50%) rotate(360deg); }
+        }
+
+        /* --- MAGISCHER HINTERGRUND ENDE --- */
+
+
+        /* Haupt-Container (muss über dem Hintergrund liegen: z-index 10) */
         .main-container {
             display: flex;
             flex-direction: row;
@@ -34,8 +79,10 @@
             gap: 30px;
             width: 95%;
             max-width: 1200px;
-            z-index: 10;
-            flex-wrap: nowrap; /* Verhindert das Umbrechen am Desktop */
+            z-index: 10; 
+            position: relative;
+            flex-wrap: nowrap;
+            padding: 20px 0;
         }
 
         .zodiac-column {
@@ -45,44 +92,49 @@
             min-width: 160px;
         }
 
+        /* Karten etwas transparenter und glänzender machen */
         .zodiac-card {
-            background: rgba(255, 255, 255, 0.07);
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            background: rgba(20, 30, 50, 0.4); /* Dunkleres, transparentes Blau */
+            border: 1px solid rgba(100, 150, 255, 0.2);
             padding: 10px;
             text-align: center;
-            border-radius: 12px;
+            border-radius: 15px;
             cursor: pointer;
-            transition: all 0.3s ease;
+            transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+            backdrop-filter: blur(5px); /* Milchglas-Effekt */
         }
 
-        .zodiac-card:hover {
+        .zodiac-card:hover, .zodiac-card.active {
             border-color: var(--glow-color);
-            box-shadow: 0 0 15px var(--glow-color);
-            background: rgba(255, 255, 255, 0.12);
+            box-shadow: 0 0 25px var(--glow-color), inset 0 0 10px rgba(0, 150, 255, 0.3);
+            background: rgba(30, 50, 80, 0.6);
+            transform: scale(1.05);
         }
 
         .zodiac-symbol {
-            font-size: 1.8rem;
+            font-size: 2rem;
             color: var(--text-gold);
             display: block;
+            text-shadow: 0 0 10px rgba(255, 204, 0, 0.6);
         }
 
         .zodiac-name {
             font-weight: bold;
             display: block;
             margin-top: 5px;
+            letter-spacing: 1px;
         }
 
         .zodiac-date {
             font-size: 0.7rem;
-            opacity: 0.8;
+            opacity: 0.7;
         }
 
         /* Glaskugel Sektion */
         .crystal-ball-container {
             position: relative;
-            width: 350px;
-            height: 350px;
+            width: 360px;
+            height: 360px;
             flex-shrink: 0;
         }
 
@@ -90,119 +142,5 @@
             width: 100%;
             height: 100%;
             border-radius: 50%;
-            background: radial-gradient(circle at 30% 30%, rgba(255,255,255,0.2) 0%, rgba(0,120,255,0.1) 50%, rgba(0,0,0,0.6) 100%);
-            box-shadow: 0 0 60px var(--glow-color), inset 0 0 40px rgba(255,255,255,0.1);
-            border: 2px solid rgba(255, 255, 255, 0.1);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            padding: 20px;
-            box-sizing: border-box;
-        }
-
-        .ball-content h1 { font-size: 1.5rem; margin: 0; text-shadow: 0 0 10px var(--glow-color); }
-        .ball-content p { font-size: 0.9rem; margin: 15px 0; }
-
-        .btn-astro {
-            background: #0078ff;
-            border: none;
-            padding: 10px 20px;
-            color: white;
-            border-radius: 20px;
-            cursor: pointer;
-            font-weight: bold;
-        }
-
-        /* Mobile Anpassung */
-        @media (max-width: 800px) {
-            .main-container { flex-direction: column; padding-top: 20px; }
-            .zodiac-column { flex-direction: row; flex-wrap: wrap; justify-content: center; }
-            .crystal-ball-container { width: 280px; height: 280px; }
-        }
-    </style>
-</head>
-<body>
-
-    <main class="main-container">
-        <div class="zodiac-column">
-            <div class="zodiac-card" onclick="selectSign('widder')">
-                <span class="zodiac-symbol">♈</span>
-                <span class="zodiac-name">Widder</span>
-                <span class="zodiac-date">21.03. - 20.04.</span>
-            </div>
-            <div class="zodiac-card" onclick="selectSign('stier')">
-                <span class="zodiac-symbol">♉</span>
-                <span class="zodiac-name">Stier</span>
-                <span class="zodiac-date">21.04. - 20.05.</span>
-            </div>
-            <div class="zodiac-card" onclick="selectSign('zwillinge')">
-                <span class="zodiac-symbol">♊</span>
-                <span class="zodiac-name">Zwillinge</span>
-                <span class="zodiac-date">21.05. - 21.06.</span>
-            </div>
-            <div class="zodiac-card" onclick="selectSign('krebs')">
-                <span class="zodiac-symbol">♋</span>
-                <span class="zodiac-name">Krebs</span>
-                <span class="zodiac-date">22.06. - 22.07.</span>
-            </div>
-            <div class="zodiac-card" onclick="selectSign('loewe')">
-                <span class="zodiac-symbol">♌</span>
-                <span class="zodiac-name">Löwe</span>
-                <span class="zodiac-date">23.07. - 23.08.</span>
-            </div>
-            <div class="zodiac-card" onclick="selectSign('jungfrau')">
-                <span class="zodiac-symbol">♍</span>
-                <span class="zodiac-name">Jungfrau</span>
-                <span class="zodiac-date">24.08. - 23.09.</span>
-            </div>
-        </div>
-
-        <div class="crystal-ball-container">
-            <div class="crystal-ball">
-                <div class="ball-content">
-                    <h1 id="ball-title">KI-FERIEN</h1>
-                    <p id="ball-text">Wähle ein Sternzeichen für deine nächste Ferien-Reise.</p>
-                    <button class="btn-astro" id="main-btn" onclick="redirectAstro()">Ferien finden</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="zodiac-column">
-            <div class="zodiac-card" onclick="selectSign('waage')">
-                <span class="zodiac-symbol">♎</span>
-                <span class="zodiac-name">Waage</span>
-                <span class="zodiac-date">24.09. - 23.10.</span>
-            </div>
-            <div class="zodiac-card" onclick="selectSign('skorpion')">
-                <span class="zodiac-symbol">♏</span>
-                <span class="zodiac-name">Skorpion</span>
-                <span class="zodiac-date">24.10. - 22.11.</span>
-            </div>
-            <div class="zodiac-card" onclick="selectSign('schuetze')">
-                <span class="zodiac-symbol">♐</span>
-                <span class="zodiac-name">Schütze</span>
-                <span class="zodiac-date">23.11. - 21.12.</span>
-            </div>
-            <div class="zodiac-card" onclick="selectSign('steinbock')">
-                <span class="zodiac-symbol">♑</span>
-                <span class="zodiac-name">Steinbock</span>
-                <span class="zodiac-date">22.12. - 20.01.</span>
-            </div>
-            <div class="zodiac-card" onclick="selectSign('wassermann')">
-                <span class="zodiac-symbol">♒</span>
-                <span class="zodiac-name">Wassermann</span>
-                <span class="zodiac-date">21.01. - 19.02.</span>
-            </div>
-            <div class="zodiac-card" onclick="selectSign('fische')">
-                <span class="zodiac-symbol">♓</span>
-                <span class="zodiac-name">Fische</span>
-                <span class="zodiac-date">20.02. - 20.03.</span>
-            </div>
-        </div>
-    </main>
-
-    <script src="match.js"></script>
-</body>
-</html>
+            /* Hellerer, magischerer Farbverlauf für die Kugel */
+            background: radial
